close strong tags

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
     </section>
 
     <section>
-      <h2 id="whyopendata">Why does Miami-Dade need an Open Data Policy?</h2>
-      <p>Information about our county and cities are our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem.</p>
+      <h2 id="whyopendata">Why does Miami-Dade need an open data policy?</h2>
+      <p>Information about our county and cities are among our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem.</p>
       <h3>Benefits of Open Data</h3> 
       <ul>
         <li>
           <h4>Transparency &amp; Accountability</h4>
           <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p> 
-          <p><strong>Examples:</p>
+          <p><strong>Examples:</strong></p>
           <ul>
             <li><a href="http://hbswk.hbs.edu/item/7393.html">Boston: Increasing Trust Between Government and Residents</a>
             <li><a href="http://chicagocouncilmatic.org/">Chicago: Tracking City Council Activity</a></li>
@@ -150,7 +150,7 @@
         <li>
           <h4>Efficiency &amp; Service improvements</h4>
           <p>Open data allows different departments in a government as well as residents to monitor trends and needs more quickly and effectively, decreasing costs and improving core services.</p> 
-          <p><strong>Examples:</p>
+          <p><strong>Examples:</strong></p>
           <ul>
             <li><a href="http://www.baltimorecity.gov/311-services">Baltimore: Tracking and reporting 311 requests</a></li>
             <li><a href="http://opencounter.cityofsantacruz.com/applicants/sign_in"> Santa Cruz: Making permitting easier for business owners</a></li>
@@ -162,7 +162,7 @@
         <li>
           <h4>Innovation &amp; Economic Development</h4>
           <p>Open data provides valuable information to our thriving industries that can propel Miami forward as a leader in both civic innovation and business.</p> 
-          <p><strong>Examples:</p>
+          <p><strong>Examples:</strong></p>
           <ul>
 
             <li><a href="http://www.opendata500.com/"> The Open Data 500: Top U.S. companies built on open data</a></li>
