--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <section>
       <h2>What are other examples of open data policies?</h2>
-      <p>http://sunlightfoundation.com/policy/local/
+      <script src="https://embed.github.com/view/geojson/sunlightpolicy/opendata/master/USlocalpolicylocations.geoJSON"></script>
     </section>
     <section>
       <h2>How much will it cost?</h2>
