--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </section>
 
     <section>
-      <h2>Examples of local open data policies?</h2>
+      <h2>Examples of local open data policies</h2>
       <script src="https://embed.github.com/view/geojson/sunlightpolicy/opendata/master/USlocalpolicylocations.geoJSON"></script>
     </section>
     <section>
