--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Miami Open Data Policy</title>
 
-  <!-- Bootstrap -->
-  <link href="css/bootstrap.css" rel="stylesheet">
   <!--Stylesheet-->
   <link href="css/main.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,7 +19,7 @@
   <script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-odp" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -32,49 +29,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">MiamiAPI</a>
+      <a class="navbar-odp-brand" href="#"><span style="color: deepskyblue"><span style="font-size:1.5em">M</span>iami </span><span style="color: #cf1b41"><span style="font-size:1.5em">O</span>pen Data</span></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        <li><a href="#">Learn More</a></li>
+        <li><a href="#petition">Sign Petition</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div class="cover">
+  <div class="cover-content">
+    <h1>Test</h1>
+    <a class="btn btn-success" href="#whatisopendata">Learn More</a>
+    <a class="btn btn-success" href="#whatisopendata">Learn More</a>
+  </div>
+</div>
 <div class="container">
   <div class="col-md-3">
     <div class="sidebar hidden-print hidden-xs hidden-sm affix-top" role="complementary">
@@ -88,9 +61,9 @@
           </ul>
         </li>
         <li>
-          <a href="#whyopendata">Why An Open Data Policy?</a>
+          <a href="#whyopendata">Why Open Data?</a>
           <ul class="nav">
-            <li><a href="#sub-section">sub-section</a></li>
+            <li><a href="#benefits">Benefits</a></li>
             <li><a href="#sub-section">sub-section</a></li>
             <li><a href="#sub-section">sub-section</a></li>
             <li><a href="#sub-section">sub-section</a></li>
@@ -118,7 +91,8 @@
   </div>
   <div class="col-md-9">
     <h2 id="whatisopendata">
-      <a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a>
+      What is Open Data
+      <!--<a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a>-->
     </h2>
     <section>
       <p>Open data refers to data (such as documents, databases, records, or transcripts, including those managed by outside vendors) released by a government or organization that is:</p>
@@ -127,50 +101,40 @@
         <li><strong>available in digital, machine-readable formats</strong> (such as json) so that it can be used in combination with other data and applications.</li>
         <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
       </ul>
-
     </section>
-
+    <h2 id="whyopendata">Why does Miami-Dade need an open data policy?</h2>
     <section>
-      <h2 id="whyopendata">Why does Miami-Dade need an open data policy?</h2>
       <p>Information about our county and cities are among our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem.</p>
-      <h3>Benefits of Open Data</h3> 
+    </section>
+    <h1 id="benefits">Benefits of Open Data</h1>
+    <section>
+      <h3>Transparency &amp; Accountability</h3>
+      <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p>
+      <p><strong>Examples:</strong></p>
       <ul>
-        <li>
-          <h4>Transparency &amp; Accountability</h4>
-          <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p> 
-          <p><strong>Examples:</strong></p>
-          <ul>
-            <li><a href="http://hbswk.hbs.edu/item/7393.html">Boston: Increasing Trust Between Government and Residents</a>
-            <li><a href="http://chicagocouncilmatic.org/">Chicago: Tracking City Council Activity</a></li>
-            <li><a href="http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/"> New York City: Targeting Illegal Building Conversions Inspections</a>  
-            <li><a href="http://sanfrancisco.crimespotting.org/">San Francisco: Mapping crime</a></li>
-          </ul>
-          <sup><a href="#">1</a></sup></p>
-        </li>
-        <li>
-          <h4>Efficiency &amp; Service improvements</h4>
-          <p>Open data allows different departments in a government as well as residents to monitor trends and needs more quickly and effectively, decreasing costs and improving core services.</p> 
-          <p><strong>Examples:</strong></p>
-          <ul>
-            <li><a href="http://www.baltimorecity.gov/311-services">Baltimore: Tracking and reporting 311 requests</a></li>
-            <li><a href="http://opencounter.cityofsantacruz.com/applicants/sign_in"> Santa Cruz: Making permitting easier for business owners</a></li>
-            <li><a href="http://www.codeforamerica.org/peer-network-training/03-20-2014/Oakland: Streamlining Public Information Requests">Oakland: Streamlining public information requests</a></li>
-            <li><a href="http://blightstatus.nola.gov/">New Orleans: Monitoring and reporting blight</a></li>  
-            <li><a href="http://www.smc-connect.org/">San Mateo County: Aggregating community services</a></li>
-          </ul>
-        </li>
-        <li>
-          <h4>Innovation &amp; Economic Development</h4>
-          <p>Open data provides valuable information to our thriving industries that can propel Miami forward as a leader in both civic innovation and business.</p> 
-          <p><strong>Examples:</strong></p>
-          <ul>
-
-            <li><a href="http://www.opendata500.com/"> The Open Data 500: Top U.S. companies built on open data</a></li>
-            <li> <a href="http://www.trulia.com/">Trulia: Giving buyers, sellers and renters better tools to find a home</a></li>
-            <li><a href="http://smartprocure.us/">SmartProcure: Connecting businesses and government to improve procurement</a></li> 
-            <li><a href="http://en.seeclickfix.com/">SeeClickFix: Streamlining and leveraging 311 data</a></li>
-          </ul>
-        </li>
+        <li><a href="http://hbswk.hbs.edu/item/7393.html">Boston: Increasing Trust Between Government and Residents</a>
+        <li><a href="http://chicagocouncilmatic.org/">Chicago: Tracking City Council Activity</a></li>
+        <li><a href="http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/"> New York City: Targeting Illegal Building Conversions Inspections</a>
+        <li><a href="http://sanfrancisco.crimespotting.org/">San Francisco: Mapping crime</a></li>
+      </ul>
+      <h4>Efficiency &amp; Service improvements</h4>
+      <p>Open data allows different departments in a government as well as residents to monitor trends and needs more quickly and effectively, decreasing costs and improving core services.</p>
+      <p><strong>Examples:</strong></p>
+      <ul>
+        <li><a href="http://www.baltimorecity.gov/311-services">Baltimore: Tracking and reporting 311 requests</a></li>
+        <li><a href="http://opencounter.cityofsantacruz.com/applicants/sign_in"> Santa Cruz: Making permitting easier for business owners</a></li>
+        <li><a href="http://www.codeforamerica.org/peer-network-training/03-20-2014/Oakland: Streamlining Public Information Requests">Oakland: Streamlining public information requests</a></li>
+        <li><a href="http://blightstatus.nola.gov/">New Orleans: Monitoring and reporting blight</a></li>
+        <li><a href="http://www.smc-connect.org/">San Mateo County: Aggregating community services</a></li>
+      </ul>
+      <h4>Innovation &amp; Economic Development</h4>
+      <p>Open data provides valuable information to our thriving industries that can propel Miami forward as a leader in both civic innovation and business.</p>
+      <p><strong>Examples:</strong></p>
+      <ul>
+        <li><a href="http://www.opendata500.com/"> The Open Data 500: Top U.S. companies built on open data</a></li>
+        <li> <a href="http://www.trulia.com/">Trulia: Giving buyers, sellers and renters better tools to find a home</a></li>
+        <li><a href="http://smartprocure.us/">SmartProcure: Connecting businesses and government to improve procurement</a></li>
+        <li><a href="http://en.seeclickfix.com/">SeeClickFix: Streamlining and leveraging 311 data</a></li>
       </ul>
     </section>
 
@@ -183,7 +147,7 @@
       <p>"There has been a range of budgeted numbers attached to legislation for funding open data efforts. Generally, anywhere from $0 (if no one is hired and no additional money is needed for technology) to $500,000 (for hiring new staff and adopting new technology) may be budgeted for city, state, or federal open data initiatives. Funding should be considered for—but not limited to—the potential of new staff (administrative, technical and legal), new software (to house, extract and input data), training, and server maintenance. It will be important for each jurisdiction to consider what it needs to support a strong open data ecosystem."</p>
       <p><em><a href="http://sunlightfoundation.com/policy/opendatafaq/#cost">&#8212;From Sunlight Foundation Open Data FAQ</a></em></p>
     </section>
-    <section="resources">
+    <section id="resources">
       <h3>Additional Resources</h3>
       <ul>
         <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
@@ -195,7 +159,7 @@
         
       </ul>
     </section>
-    <section class="petition">
+    <section id="petition" class="petition">
       <h3>Do you support open data in Miami?</h3>
       <div>
         <a href="#" class="petition-yes">Yes.</a>
