replace Google Spreadsheet with Mailchimp form

--- a/index.html
+++ b/index.html
@@ -133,41 +133,41 @@
     <section>
       <h2 id="whyopendata">Why does Miami-Dade need an open data policy?</h2>
       <p>Information about our county and cities are among our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem.</p>
-      <h3>Benefits of Open Data</h3> 
+      <h3>Benefits of Open Data</h3>
       <ul>
         <li>
           <h4>Transparency &amp; Accountability</h4>
-          <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p> 
+          <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p>
           <p><strong>Examples:</strong></p>
           <ul>
             <li><a href="http://hbswk.hbs.edu/item/7393.html">Boston: Increasing Trust Between Government and Residents</a>
             <li><a href="http://chicagocouncilmatic.org/">Chicago: Tracking City Council Activity</a></li>
-            <li><a href="http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/"> New York City: Targeting Illegal Building Conversions Inspections</a>  
+            <li><a href="http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/"> New York City: Targeting Illegal Building Conversions Inspections</a>
             <li><a href="http://sanfrancisco.crimespotting.org/">San Francisco: Mapping crime</a></li>
           </ul>
           <sup><a href="#">1</a></sup></p>
         </li>
         <li>
           <h4>Efficiency &amp; Service improvements</h4>
-          <p>Open data allows different departments in a government as well as residents to monitor trends and needs more quickly and effectively, decreasing costs and improving core services.</p> 
+          <p>Open data allows different departments in a government as well as residents to monitor trends and needs more quickly and effectively, decreasing costs and improving core services.</p>
           <p><strong>Examples:</strong></p>
           <ul>
             <li><a href="http://www.baltimorecity.gov/311-services">Baltimore: Tracking and reporting 311 requests</a></li>
             <li><a href="http://opencounter.cityofsantacruz.com/applicants/sign_in"> Santa Cruz: Making permitting easier for business owners</a></li>
             <li><a href="http://www.codeforamerica.org/peer-network-training/03-20-2014/Oakland: Streamlining Public Information Requests">Oakland: Streamlining public information requests</a></li>
-            <li><a href="http://blightstatus.nola.gov/">New Orleans: Monitoring and reporting blight</a></li>  
+            <li><a href="http://blightstatus.nola.gov/">New Orleans: Monitoring and reporting blight</a></li>
             <li><a href="http://www.smc-connect.org/">San Mateo County: Aggregating community services</a></li>
           </ul>
         </li>
         <li>
           <h4>Innovation &amp; Economic Development</h4>
-          <p>Open data provides valuable information to our thriving industries that can propel Miami forward as a leader in both civic innovation and business.</p> 
+          <p>Open data provides valuable information to our thriving industries that can propel Miami forward as a leader in both civic innovation and business.</p>
           <p><strong>Examples:</strong></p>
           <ul>
 
             <li><a href="http://www.opendata500.com/"> The Open Data 500: Top U.S. companies built on open data</a></li>
             <li> <a href="http://www.trulia.com/">Trulia: Giving buyers, sellers and renters better tools to find a home</a></li>
-            <li><a href="http://smartprocure.us/">SmartProcure: Connecting businesses and government to improve procurement</a></li> 
+            <li><a href="http://smartprocure.us/">SmartProcure: Connecting businesses and government to improve procurement</a></li>
             <li><a href="http://en.seeclickfix.com/">SeeClickFix: Streamlining and leveraging 311 data</a></li>
           </ul>
         </li>
@@ -192,18 +192,41 @@
         <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
         <li><a href="https://usodi.org/">U.S. Open Data Institute</a>
         <li><a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a></li>
-        
+
       </ul>
     </section>
     <section class="petition">
       <h3>Do you support open data in Miami?</h3>
       <div>
+          <p>We will send you updates about the Open Data Policy in Miami.</p>
+          <small><a href="#privacy">We care about your privacy.</a></small>
+      </div>
+      <div>
         <a href="#" class="petition-yes">Yes.</a>
         <a href="#" class="petition-no">Not yet.</a>
       </div>
-      <form class="form-petition">
-        <input type="text" placeholder="full name" class="input-name"><input type="text" placeholder="email address" class="input-email"><button type="submit">Sign</button>
-      </form>
+          <!-- Begin MailChimp Signup Form -->
+        <form
+            class="form-petition"
+            action="//codeformiami.us3.list-manage.com/subscribe/post?u=246ae18879d8d50abf4bf01ba&amp;id=ec4a643e74"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+            class="validate"
+            target="_blank"
+            novalidate>
+            <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name">
+            <input type="text" value="" name="LNAME" class="" id="mce-LNAME" placeholder="Last Name">
+        	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
+        	<input type="text" value="" name="MMERGE3" class="" id="mce-MMERGE3" placeholder="Zip Code">
+        	<div id="mce-responses" style="display:none">
+        		<div class="response" id="mce-error-response" style="display:none"></div>
+        		<div class="response" id="mce-success-response" style="display:none"></div>
+        	</div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <input type="text" name="b_246ae18879d8d50abf4bf01ba_ec4a643e74" tabindex="-1" value="" style="display:none">
+            <button type="submit" name="subscribe" id="mc-embedded-subscribe">Sign Up</button>
+        </form>
+        <!--End mc_embed_signup-->
+
     </section>
     <!--<section="supporters">
       <h3>Supporters</h3>
@@ -227,40 +250,48 @@ $(document).ready(function() {
         ev.preventDefault();
         $('.form-petition').fadeIn();
     });
+    //
+    // $('body').on('click', '.petition-no', function(ev) {
+    //     ev.preventDefault();
+    //     // scrolltoid
+    // });
 
-    $('body').on('click', '.petition-no', function(ev) {
-        ev.preventDefault();
-        // scrolltoid
-    });
-
-    $('.form-petition').on('click', 'button', function() {
-    	var $name = $('.input-name').val();
-        var $email = $('.input-email').val();
-
-    	var data = {
-    		"entry.111166231": $name,
-    		"entry.945947808": $email
-    	};
-
-    	console.log(data);
-
-    	$.ajax({
-    		type: "POST",
-    		url: 'https://docs.google.com/a/nightshiftcreative.com/forms/d/1NXG3BTSi19_Qkc9rKcay1yqXqB1aGoi4UGPWtoYNEk4/formResponse',
-    		data: data,
-    		dataType: 'xml'
-    	})
-    	.done(function(data) {
-    		console.log('POST success.');
-    	})
-    	.fail(function(jqXHR, textStatus) {
-    		console.log('POST fail: ' + textStatus);
-    	});
-    });
+    // $('.form-petition').on('submit', function() {
+    // 	var $name = $('.input-name').val();
+    //     var $email = $('.input-email').val();
+    //
+    // 	var data = {
+    // 		"entry.619140565": $name,
+    // 		"entry.1406844737": $email
+    // 	};
+    //
+    // 	console.log(data);
+    //
+    // 	$.ajax({
+    // 		type: "POST",
+    // 		url: 'http://docs.google.com/a/nightshiftcreative.com/forms/d/1I0s9IvJWf0lxO5RLJqRj8hkt9_WeBIYTSMEBjfY8FeM/formResponse',
+    // 		data: data,
+    // 		dataType: 'xml',
+    //         statusCode: {
+    //             0: function (){
+    //                 console.log('0');
+    //             },
+    //             200: function (){
+    //                 console.log('200');
+    //             }
+    //         }
+    // 	})
+    // 	.done(function(data) {
+    // 		console.log('POST success.');
+    // 	})
+    // 	.fail(function(jqXHR, textStatus) {
+    // 		console.log('POST fail: ' + textStatus);
+    // 	});
+    // });
 });
 </script>
-<script src="js/bootstrap.js"></script>
-<script src="js/app.js"></script>
+<!-- <script src="js/bootstrap.js"></script>
+<script src="js/app.js"></script> -->
 
 </body>
 </html>
