--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
+  <!--[if lt IE 9]  >
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
@@ -35,62 +35,51 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Learn More</a></li>
-        <li><a href="#petition">Sign Petition</a></li>
+        <li><a class="blue" href="#start">Learn More</a></li>
+        <li><a class="pink" href="#sign">Sign Petition</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 <div class="cover">
   <div class="cover-content">
-    <h1>Test</h1>
-    <a class="btn btn-success" href="#whatisopendata">Learn More</a>
-    <a class="btn btn-success" href="#whatisopendata">Learn More</a>
+    <h1>  <p class="miami">Miami </p><p class="opendata"> OpenData</p>
+    </h1>
+
+    <a class="btn btn-success" href="#start">Learn More</a>
+    <a class="btn btn-success" href="#sign">Learn More</a>
   </div>
 </div>
 <div class="container">
   <div class="col-md-3">
     <div class="sidebar hidden-print hidden-xs hidden-sm affix-top" role="complementary">
       <ul class="nav sidenav">
-        <li class="active">
+        <li>
           <a href="#whatisopendata">What Is Open Data?</a>
-          <ul class="nav">
-            <li><a href="#sub-section">sub-section</a></li>
-            <li><a href="#sub-section">sub-section</a></li>
-            <li><a href="#sub-section">sub-section</a></li>
-          </ul>
         </li>
         <li>
           <a href="#whyopendata">Why Open Data?</a>
-          <ul class="nav">
-            <li><a href="#benefits">Benefits</a></li>
-            <li><a href="#sub-section">sub-section</a></li>
-            <li><a href="#sub-section">sub-section</a></li>
-            <li><a href="#sub-section">sub-section</a></li>
-          </ul>
         </li>
-        <li><a href="#section">Section</a></li>
         <li>
-          <a href="#pagination">Section</a>
+          <a href="#benefits">Benefits</a>
           <ul class="nav">
-            <li><a href="#pagination-default">Sub-Section</a></li>
-            <li><a href="#pagination-pager">Sub-Section</a></li>
+            <li><a href="#transparency">Transparency</a></li>
+            <li><a href="#efficiency">Efficiency</a></li>
+            <li><a href="#innovation">Innovation</a></li>
           </ul>
         </li>
-        <li><a href="#section">Section</a></li>
-        <li><a href="#section">Section</a></li>
-        <li><a href="#section">Section</a></li>
-        <li><a href="#section">Section</a></li>
-        <li><a href="#section">Section</a></li>
-        <li><a href="#section">Section</a></li>
+        <li><a href="#examples">Examples</a></li>
+        <li><a href="#cost">Cost</a></li>
+        <li><a href="#resources">Resources</a></li>
+        <li><a href="#petition">Petition</a></li>
       </ul>
       <a class="back-to-top" href="#top">
         Back to top
       </a>
     </div>
   </div>
-  <div class="col-md-9">
-    <h2 id="whatisopendata">
+  <div id="start" class="col-md-9">
+    <h2 id="whatisopendata" class="page-header">
       What is Open Data
       <!--<a href="http://www.codeforamerica.org/governments/capabilities/open-data/#intro">What is Open Data?</a>-->
     </h2>
@@ -102,13 +91,13 @@
         <li><strong>available in its entirety</strong> — and able to be downloaded “in bulk” and not just manually retrieved record-by-record.</li>
       </ul>
     </section>
-    <h2 id="whyopendata">Why does Miami-Dade need an open data policy?</h2>
+    <h2 id="whyopendata" class="page-header">Why does Miami-Dade need an open data policy?</h2>
     <section>
       <p>Information about our county and cities are among our governments' greatest public assets. While Miami-Dade County and many municipalities <a href="http://us-city.census.okfn.org/">have significant data available,</a> we lag behind many other counties and cities of our size in overall availabilty of data and frequency at which those data are updated. We also lack a centralized data repository for easy access to our data. Adopting a formal open data policy is the first step toward making local government information accessible and easy-to-use and the only way we might consistently leverage the benefits of a true open data ecosystem.</p>
     </section>
-    <h1 id="benefits">Benefits of Open Data</h1>
+    <h1 id="benefits" class="page-header">Benefits of Open Data</h1>
     <section>
-      <h3>Transparency &amp; Accountability</h3>
+      <h2 id="transparency">Transparency &amp; Accountability</h2>
       <p>Having formal policies and processes in place to release open data can help residents better understand important civic issues in their communities, including spending, economic development, services, energy, transit, infrastructure and crime. Formal guidelines can also better <a href="http://sunlightfoundation.com/policy/opendatafaq/#safeguard">safeguard sensitive information about individuals</a> over the long-term.</p>
       <p><strong>Examples:</strong></p>
       <ul>
@@ -117,7 +106,7 @@
         <li><a href="http://beyondtransparency.org/chapters/part-4/beyond-open-data-the-data-driven-city/"> New York City: Targeting Illegal Building Conversions Inspections</a>
         <li><a href="http://sanfrancisco.crimespotting.org/">San Francisco: Mapping crime</a></li>
       </ul>
-      <h4>Efficiency &amp; Service improvements</h4>
+      <h2 id="efficiency">Efficiency &amp; Service improvements</h2>
       <p>Open data allows different departments in a government as well as residents to monitor trends and needs more quickly and effectively, decreasing costs and improving core services.</p>
       <p><strong>Examples:</strong></p>
       <ul>
@@ -127,7 +116,7 @@
         <li><a href="http://blightstatus.nola.gov/">New Orleans: Monitoring and reporting blight</a></li>
         <li><a href="http://www.smc-connect.org/">San Mateo County: Aggregating community services</a></li>
       </ul>
-      <h4>Innovation &amp; Economic Development</h4>
+      <h2 id="innovation">Innovation &amp; Economic Development</h2>
       <p>Open data provides valuable information to our thriving industries that can propel Miami forward as a leader in both civic innovation and business.</p>
       <p><strong>Examples:</strong></p>
       <ul>
@@ -137,18 +126,17 @@
         <li><a href="http://en.seeclickfix.com/">SeeClickFix: Streamlining and leveraging 311 data</a></li>
       </ul>
     </section>
-
+    <h1 id="examples" class="page-header">Examples of local open data policies</h1>
     <section>
-      <h2>Examples of local open data policies</h2>
       <script src="https://embed.github.com/view/geojson/sunlightpolicy/opendata/master/USlocalpolicylocations.geoJSON"></script>
     </section>
+    <h1 id="cost" class="page-header">How much will it cost?</h1>
     <section>
-      <h2>How much will it cost?</h2>
       <p>"There has been a range of budgeted numbers attached to legislation for funding open data efforts. Generally, anywhere from $0 (if no one is hired and no additional money is needed for technology) to $500,000 (for hiring new staff and adopting new technology) may be budgeted for city, state, or federal open data initiatives. Funding should be considered for—but not limited to—the potential of new staff (administrative, technical and legal), new software (to house, extract and input data), training, and server maintenance. It will be important for each jurisdiction to consider what it needs to support a strong open data ecosystem."</p>
       <p><em><a href="http://sunlightfoundation.com/policy/opendatafaq/#cost">&#8212;From Sunlight Foundation Open Data FAQ</a></em></p>
     </section>
-    <section id="resources">
-      <h3>Additional Resources</h3>
+    <h1 id="resources" class="page-header">Additional Resources</h1>
+    <section>
       <ul>
         <li><a href="http://www.codeforamerica.org/governments/capabilities/open-data/">Code for America: Open Data Playbook</a></li>
         <li><a href="http://sunlightfoundation.com/policy/local/">Sunlight Foundation: Local Open Data Policy</a></li>
@@ -156,11 +144,10 @@
         <li><a href="http://opendatahandbook.org/">Open Knowledge Foundation: Open Data Handbook</a></li>
         <li><a href="https://usodi.org/">U.S. Open Data Institute</a>
         <li><a href="http://www.socrata.com/open-data-field-guide/">Socrata Open Data Field Guide</a></li>
-        
       </ul>
     </section>
-    <section id="petition" class="petition">
-      <h3>Do you support open data in Miami?</h3>
+    <h1 id="petition">Do you support open data in Miami?</h1>
+    <section id="sign" class="petition page-header">
       <div>
         <a href="#" class="petition-yes">Yes.</a>
         <a href="#" class="petition-no">Not yet.</a>
