changed bs font-size base to 16

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1>  <p class="miami">Miami </p><p class="opendata"> OpenData</p>
     </h1>
 
-    <a class="btn btn-odp-blue" href="#start">Learn More</a>
+    <a class="btn btn-odp-blue btn-lg" href="#start">Learn More</a>
     <a class="btn btn-success" href="#sign">Sign Petition</a>
   </div>
 </div>
