--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <h1>  <p class="miami">Miami </p><p class="opendata"> OpenData</p>
     </h1>
 
-    <a class="btn btn-odp-blue btn-lg" href="#start">Learn More</a>
-    <a class="btn btn-success" href="#sign">Sign Petition</a>
+    <a class="btn btn-odp-pink btn-xl" href="#start">Learn More</a>
+    <a class="btn btn-odp-blue btn-xl" href="#sign">Sign Petition</a>
   </div>
 </div>
 <div class="container">
