fixed brand margin

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 </nav>
 <div class="cover">
   <div class="cover-content">
-    <h1>  <p class="miami">Miami </p><p class="opendata"> OpenData</p>
+    <h1>
+      <p class="miami">Miami </p><p class="opendata">OpenData</p>
     </h1>
-
     <a class="btn btn-odp-pink btn-xl" href="#start">Learn More</a>
     <a class="btn btn-odp-blue btn-xl" href="#sign">Sign Petition</a>
   </div>
