added lead text

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <h1>
       <p class="miami">Miami </p><p class="opendata">OpenData</p>
     </h1>
+    <p class="lead">Taking steps to the future one dataset at a time.</p>
     <a class="btn btn-odp-pink btn-xl" href="#start">Learn More</a>
     <a class="btn btn-odp-blue btn-xl" href="#sign">Sign Petition</a>
   </div>
