Update privacy message

--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
           <button type="submit" name="subscribe" id="mc-embedded-subscribe">Sign Up</button>
       </form>
       <div>
-          <p>We will send you updates about the Open Data Policy in Miami.</p>
-          <small><a href="#privacy">We care about your privacy.</a></small>
+        <hr>
+        <p>We will send you updates about the Open Data Policy in Miami.</p>
+        <small><em>We care about your privacy, we won't share your information.</em></small>
       </div>
       <!--End mc_embed_signup-->
     </section>
