added footer and refactored affix js

--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
     </section>-->
   </div>
 
+
+</div>
+<div class="footer">
+  <div class="container">
+        Built with <span class="glyphicon glyphicon-heart"></span> by <a href="http://codeformiami.org/"><span style="color: deepskyblue">Code </span><span style="color: #cf1b41">For Miami</span></a>
+    </div>
+  </div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
