Use formkeep instead of MailChimp - thx for the suggestion @cyberstrike

--- a/index.html
+++ b/index.html
@@ -77,28 +77,19 @@
         <a href="#benefits" class="petition-no">Not yet.</a>
       </div>
       <!-- Begin MailChimp Signup Form -->
+
       <form
-        class="form-petition"
-        action="//codeformiami.us3.list-manage.com/subscribe/post?u=246ae18879d8d50abf4bf01ba&amp;id=ec4a643e74"
-        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-        class="validate"
-        target="_blank"
-        novalidate>
-        <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name">
-        <input type="text" value="" name="LNAME" class="" id="mce-LNAME" placeholder="Last Name">
-        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
-        <input type="text" value="" name="MMERGE3" class="" id="mce-MMERGE3" placeholder="Zip Code">
-        <div id="mce-responses" style="display:none">
-          <div class="response" id="mce-error-response" style="display:none"></div>
-          <div class="response" id="mce-success-response" style="display:none"></div>
-        </div>
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <input type="text" name="b_246ae18879d8d50abf4bf01ba_ec4a643e74" tabindex="-1" value="" style="display:none">
-        <button type="submit" name="subscribe" id="mc-embedded-subscribe">Sign Up</button>
+        class="form-petition" accept-charset="UTF-8" action="https://formkeep.com/f/9a5e8d0c6401" method="POST">
+  <input type="hidden" name="utf8" value="✓">
+        <input type="text" name="firstname" required placeholder="First Name">
+        <input type="text" name="lastname" required placeholder="Last Name">
+        <input type="email" name="email" required placeholder="Email">
+        <input type="number" name="zipcode" required placeholder="Zip Code">
+        <button type="submit">Sign Up</button>
       </form>
       <div>
         <hr>
-        <p>We will send you updates about the Open Data Policy in Miami.</p>
+        <!-- <p>We will send you updates about the Open Data Policy in Miami.</p> -->
         <small><em>We care about your privacy, we won't share your information.</em></small>
       </div>
       <!--End mc_embed_signup-->
